// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App modal works correctly should close modal successfully on back action 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#151823",
      },
    ]
  }
/>
`;

exports[`App modal works correctly should not render any component when modalType is null 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#151823",
      },
    ]
  }
/>
`;

exports[`App modal works correctly should prevent closing modal until user accept consent 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#151823",
      },
    ]
  }
>
  <View
    enabled={false}
    style={
      {
        "backgroundColor": "#0D0F16",
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={1022.9007633587786}
      bbWidth={750}
      color="transparent"
      fill="transparent"
      focusable={false}
      height={1022.9007633587786}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "top": -13.638676844783715,
          },
          {
            "flex": 0,
            "height": 1022,
            "width": 750,
          },
        ]
      }
      testID="svg-icon-consent"
      tintColor="transparent"
      vbHeight={536}
      vbWidth={393}
      width={750}
      xml="<svg width="393" height="536" viewBox="0 0 393 536" fill="none" xmlns="http://www.w3.org/2000/svg">
<ellipse cx="153.784" cy="310.636" rx="225.784" ry="225.364" fill="url(#paint0_linear_2867_68724)" fill-opacity="0.04"/>
<path d="M379.068 310.636C379.068 434.824 278.206 535.5 153.784 535.5C29.3622 535.5 -71.5 434.824 -71.5 310.636C-71.5 186.448 29.3622 85.7727 153.784 85.7727C278.206 85.7727 379.068 186.448 379.068 310.636Z" stroke="url(#paint1_linear_2867_68724)" stroke-opacity="0.1"/>
<ellipse cx="153.784" cy="225.364" rx="225.784" ry="225.364" fill="url(#paint2_linear_2867_68724)" fill-opacity="0.04"/>
<path d="M379.068 225.364C379.068 349.552 278.206 450.227 153.784 450.227C29.3622 450.227 -71.5 349.552 -71.5 225.364C-71.5 101.176 29.3622 0.5 153.784 0.5C278.206 0.5 379.068 101.176 379.068 225.364Z" stroke="url(#paint3_linear_2867_68724)" stroke-opacity="0.1"/>
<ellipse cx="239.216" cy="310.636" rx="225.784" ry="225.364" fill="url(#paint4_linear_2867_68724)" fill-opacity="0.04"/>
<path d="M464.5 310.636C464.5 434.824 363.638 535.5 239.216 535.5C114.794 535.5 13.9318 434.824 13.9318 310.636C13.9318 186.448 114.794 85.7727 239.216 85.7727C363.638 85.7727 464.5 186.448 464.5 310.636Z" stroke="url(#paint5_linear_2867_68724)" stroke-opacity="0.1"/>
<ellipse cx="239.216" cy="225.364" rx="225.784" ry="225.364" fill="url(#paint6_linear_2867_68724)" fill-opacity="0.04"/>
<path d="M464.5 225.364C464.5 349.552 363.638 450.227 239.216 450.227C114.794 450.227 13.9318 349.552 13.9318 225.364C13.9318 101.176 114.794 0.5 239.216 0.5C363.638 0.5 464.5 101.176 464.5 225.364Z" stroke="url(#paint7_linear_2867_68724)" stroke-opacity="0.1"/>
<ellipse opacity="0.4" cx="196.5" cy="268" rx="134.25" ry="134" fill="#0D0F16"/>
<path d="M330.25 268C330.25 341.729 270.369 401.5 196.5 401.5C122.631 401.5 62.75 341.729 62.75 268C62.75 194.271 122.631 134.5 196.5 134.5C270.369 134.5 330.25 194.271 330.25 268Z" stroke="url(#paint8_linear_2867_68724)" stroke-opacity="0.5"/>
<path fill-rule="evenodd" clip-rule="evenodd" d="M154.616 216.151C154.479 216.198 154.487 216.663 154.503 217.687C154.509 218.112 154.517 218.634 154.517 219.262C154.517 230.179 163.282 232.4 163.282 232.4C163.282 232.4 154.517 231.528 154.517 233.88C154.518 236.232 162.177 239.246 162.177 239.246C162.177 239.246 149.103 241.335 149.103 243.687C149.103 244.432 149.99 244.585 151.587 244.86C153.632 245.213 156.842 245.767 160.851 248.021C155.324 255.538 152.056 264.831 152.056 274.889C152.056 299.912 172.276 320.197 197.219 320.197C206.2 320.197 214.568 317.567 221.601 313.033C221.058 312.279 220.857 311.253 221.241 310.228C223.337 304.626 224.204 300.542 223.979 296.988C223.756 293.481 222.456 290.322 219.875 286.593C218.455 284.541 217.036 282.965 215.678 281.557C215.321 281.186 214.959 280.82 214.6 280.454L214.598 280.453C213.624 279.464 212.661 278.486 211.818 277.476C210.628 276.048 209.598 274.472 208.878 272.446C208.162 270.43 207.777 268.044 207.777 265.02C207.777 256.805 213.266 250.217 219.94 247.469C224.096 245.758 228.808 245.503 233.033 247.283C224.776 236.519 211.805 229.582 197.219 229.582C196.714 229.582 196.211 229.591 195.711 229.607C165.92 229.15 157.609 219.466 155.332 216.814C154.943 216.359 154.73 216.111 154.616 216.151ZM190.923 267.957C189.753 267.542 188.494 267.317 187.183 267.317C186.026 267.317 184.911 267.492 183.861 267.817C183.065 268.064 182.668 268.188 182.362 268.129C182.097 268.078 181.847 267.937 181.667 267.735C181.459 267.503 181.39 267.22 181.251 266.656C181.039 265.796 180.924 264.877 180.924 263.922C180.924 259.104 183.844 255.198 187.446 255.198C191.048 255.198 193.968 259.104 193.968 263.922C193.968 264.958 193.833 265.952 193.586 266.874C193.433 267.441 193.357 267.724 193.141 267.954C192.953 268.152 192.696 268.288 192.426 268.33C192.115 268.379 191.718 268.238 190.923 267.957Z" fill="url(#paint9_linear_2867_68724)"/>
<path d="M221.137 285.714C215.194 277.128 209.313 276.594 209.313 265.02C209.313 250.041 229.368 240.681 238.828 253.971C242.889 259.677 244.254 268.481 244.254 275.367C244.254 290.743 236.506 304.315 224.678 312.448C223.55 313.224 222.198 312.053 222.679 310.77C226.926 299.418 226.5 293.462 221.137 285.714Z" fill="url(#paint10_radial_2867_68724)"/>
<defs>
<linearGradient id="paint0_linear_2867_68724" x1="153.784" y1="85.2727" x2="153.784" y2="536" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint1_linear_2867_68724" x1="153.784" y1="85.2727" x2="153.784" y2="536" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint2_linear_2867_68724" x1="153.784" y1="0" x2="153.784" y2="450.727" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint3_linear_2867_68724" x1="153.784" y1="0" x2="153.784" y2="450.727" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint4_linear_2867_68724" x1="239.216" y1="85.2727" x2="239.216" y2="536" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint5_linear_2867_68724" x1="239.216" y1="85.2727" x2="239.216" y2="536" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint6_linear_2867_68724" x1="239.216" y1="0" x2="239.216" y2="450.727" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint7_linear_2867_68724" x1="239.216" y1="0" x2="239.216" y2="450.727" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint8_linear_2867_68724" x1="196.5" y1="134" x2="196.5" y2="402" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint9_linear_2867_68724" x1="245.502" y1="215.699" x2="149.07" y2="319.438" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<radialGradient id="paint10_radial_2867_68724" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(209.345 284.905) rotate(-13.3174) scale(43.5119 57.2398)">
<stop stop-color="#F27C34"/>
<stop offset="1" stop-color="#A55282"/>
</radialGradient>
</defs>
</svg>
"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "payload": 0,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGEllipse
          cx={153.784}
          cy={310.636}
          fill={
            {
              "brushRef": "paint0_linear_2867_68724",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={225.784}
          ry={225.364}
        />
        <RNSVGPath
          d="M379.068 310.636C379.068 434.824 278.206 535.5 153.784 535.5C29.3622 535.5 -71.5 434.824 -71.5 310.636C-71.5 186.448 29.3622 85.7727 153.784 85.7727C278.206 85.7727 379.068 186.448 379.068 310.636Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint1_linear_2867_68724",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={153.784}
          cy={225.364}
          fill={
            {
              "brushRef": "paint2_linear_2867_68724",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={225.784}
          ry={225.364}
        />
        <RNSVGPath
          d="M379.068 225.364C379.068 349.552 278.206 450.227 153.784 450.227C29.3622 450.227 -71.5 349.552 -71.5 225.364C-71.5 101.176 29.3622 0.5 153.784 0.5C278.206 0.5 379.068 101.176 379.068 225.364Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint3_linear_2867_68724",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={239.216}
          cy={310.636}
          fill={
            {
              "brushRef": "paint4_linear_2867_68724",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={225.784}
          ry={225.364}
        />
        <RNSVGPath
          d="M464.5 310.636C464.5 434.824 363.638 535.5 239.216 535.5C114.794 535.5 13.9318 434.824 13.9318 310.636C13.9318 186.448 114.794 85.7727 239.216 85.7727C363.638 85.7727 464.5 186.448 464.5 310.636Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint5_linear_2867_68724",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={239.216}
          cy={225.364}
          fill={
            {
              "brushRef": "paint6_linear_2867_68724",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={225.784}
          ry={225.364}
        />
        <RNSVGPath
          d="M464.5 225.364C464.5 349.552 363.638 450.227 239.216 450.227C114.794 450.227 13.9318 349.552 13.9318 225.364C13.9318 101.176 114.794 0.5 239.216 0.5C363.638 0.5 464.5 101.176 464.5 225.364Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint7_linear_2867_68724",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={196.5}
          cy={268}
          fill={
            {
              "payload": 4279045910,
              "type": 0,
            }
          }
          opacity={0.4}
          propList={
            [
              "fill",
            ]
          }
          rx={134.25}
          ry={134}
        />
        <RNSVGPath
          d="M330.25 268C330.25 341.729 270.369 401.5 196.5 401.5C122.631 401.5 62.75 341.729 62.75 268C62.75 194.271 122.631 134.5 196.5 134.5C270.369 134.5 330.25 194.271 330.25 268Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint8_linear_2867_68724",
              "type": 1,
            }
          }
          strokeOpacity={0.5}
        />
        <RNSVGPath
          clipRule={0}
          d="M154.616 216.151C154.479 216.198 154.487 216.663 154.503 217.687C154.509 218.112 154.517 218.634 154.517 219.262C154.517 230.179 163.282 232.4 163.282 232.4C163.282 232.4 154.517 231.528 154.517 233.88C154.518 236.232 162.177 239.246 162.177 239.246C162.177 239.246 149.103 241.335 149.103 243.687C149.103 244.432 149.99 244.585 151.587 244.86C153.632 245.213 156.842 245.767 160.851 248.021C155.324 255.538 152.056 264.831 152.056 274.889C152.056 299.912 172.276 320.197 197.219 320.197C206.2 320.197 214.568 317.567 221.601 313.033C221.058 312.279 220.857 311.253 221.241 310.228C223.337 304.626 224.204 300.542 223.979 296.988C223.756 293.481 222.456 290.322 219.875 286.593C218.455 284.541 217.036 282.965 215.678 281.557C215.321 281.186 214.959 280.82 214.6 280.454L214.598 280.453C213.624 279.464 212.661 278.486 211.818 277.476C210.628 276.048 209.598 274.472 208.878 272.446C208.162 270.43 207.777 268.044 207.777 265.02C207.777 256.805 213.266 250.217 219.94 247.469C224.096 245.758 228.808 245.503 233.033 247.283C224.776 236.519 211.805 229.582 197.219 229.582C196.714 229.582 196.211 229.591 195.711 229.607C165.92 229.15 157.609 219.466 155.332 216.814C154.943 216.359 154.73 216.111 154.616 216.151ZM190.923 267.957C189.753 267.542 188.494 267.317 187.183 267.317C186.026 267.317 184.911 267.492 183.861 267.817C183.065 268.064 182.668 268.188 182.362 268.129C182.097 268.078 181.847 267.937 181.667 267.735C181.459 267.503 181.39 267.22 181.251 266.656C181.039 265.796 180.924 264.877 180.924 263.922C180.924 259.104 183.844 255.198 187.446 255.198C191.048 255.198 193.968 259.104 193.968 263.922C193.968 264.958 193.833 265.952 193.586 266.874C193.433 267.441 193.357 267.724 193.141 267.954C192.953 268.152 192.696 268.288 192.426 268.33C192.115 268.379 191.718 268.238 190.923 267.957Z"
          fill={
            {
              "brushRef": "paint9_linear_2867_68724",
              "type": 1,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
        <RNSVGPath
          d="M221.137 285.714C215.194 277.128 209.313 276.594 209.313 265.02C209.313 250.041 229.368 240.681 238.828 253.971C242.889 259.677 244.254 268.481 244.254 275.367C244.254 290.743 236.506 304.315 224.678 312.448C223.55 313.224 222.198 312.053 222.679 310.77C226.926 299.418 226.5 293.462 221.137 285.714Z"
          fill={
            {
              "brushRef": "paint10_radial_2867_68724",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint0_linear_2867_68724"
            x1={153.784}
            x2={153.784}
            y1={85.2727}
            y2={536}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint1_linear_2867_68724"
            x1={153.784}
            x2={153.784}
            y1={85.2727}
            y2={536}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint2_linear_2867_68724"
            x1={153.784}
            x2={153.784}
            y1={0}
            y2={450.727}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint3_linear_2867_68724"
            x1={153.784}
            x2={153.784}
            y1={0}
            y2={450.727}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint4_linear_2867_68724"
            x1={239.216}
            x2={239.216}
            y1={85.2727}
            y2={536}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint5_linear_2867_68724"
            x1={239.216}
            x2={239.216}
            y1={85.2727}
            y2={536}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint6_linear_2867_68724"
            x1={239.216}
            x2={239.216}
            y1={0}
            y2={450.727}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint7_linear_2867_68724"
            x1={239.216}
            x2={239.216}
            y1={0}
            y2={450.727}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint8_linear_2867_68724"
            x1={196.5}
            x2={196.5}
            y1={134}
            y2={402}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint9_linear_2867_68724"
            x1={245.502}
            x2={149.07}
            y1={215.699}
            y2={319.438}
          />
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              [
                0,
                -885708,
                1,
                -5942654,
              ]
            }
            gradientTransform={
              [
                42.34181996203336,
                -10.022760294088279,
                13.184917107309825,
                55.70056251882353,
                209.345,
                284.905,
              ]
            }
            gradientUnits={1}
            name="paint10_radial_2867_68724"
            rx={1}
            ry={1}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        {
          "bottom": 0,
          "left": 0,
          "paddingBottom": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
      <View
        style={
          {
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffff",
              "fontFamily": "OpenSans-Bold",
              "fontSize": 24,
              "includeFontPadding": false,
              "marginBottom": 32,
              "textAlign": "center",
            }
          }
        >
          Your Keet Profile
        </Text>
        <Text
          style={
            {
              "color": "#A0A8B8",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "includeFontPadding": false,
              "marginBottom": 32,
              "textAlign": "center",
            }
          }
        >
          Choose how you’d like to set up your Keet Profile for this device:
        </Text>
        <View
          style={
            {
              "flex": 1,
            }
          }
        />
        <View
          accessibilityLabel="identity_btn_create"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "opacity": 1,
              },
              {
                "alignItems": "center",
                "backgroundColor": "#151823",
                "borderRadius": 16,
                "flexDirection": "row",
                "marginBottom": 16,
                "padding": 16,
              },
            ]
          }
          testID="identity_btn_create"
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 16,
                  "includeFontPadding": false,
                }
              }
            >
              Create a new profile
            </Text>
            <Text
              style={
                {
                  "color": "#A0A8B8",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 14,
                  "includeFontPadding": false,
                  "lineHeight": 21,
                  "marginTop": 2,
                }
              }
            >
              Start fresh with a new profile for this device
            </Text>
          </View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#ffffff"
            fill="#ffffff"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {},
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            testID="svg-icon-chevronRight"
            tintColor="#ffffff"
            vbHeight={24}
            vbWidth={24}
            width={20}
            xml="<svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m17.031 12.531-7.49996 7.5c-.06968.0697-.15241.125-.24345.1627-.09105.0377-.18863.0571-.28717.0571-.09855 0-.19613-.0194-.28718-.0571-.09104-.0377-.17377-.093-.24345-.1627-.06968-.0696-.12496-.1524-.16267-.2434-.03771-.0911-.05712-.1886-.05712-.2872 0-.0985.01941-.1961.05712-.2872.03771-.091.09299-.1737.16267-.2434l6.97031-6.9694-6.97031-6.96936c-.14073-.14073-.21979-.3316-.21979-.53062 0-.19903.07906-.3899.21979-.53063s.3316-.21979.53063-.21979c.19902 0 .38989.07906.53062.21979l7.49996 7.50001c.0698.0696.1251.1524.1628.2434.0378.0911.0572.1887.0572.2872 0 .0986-.0194.1962-.0572.2872-.0377.0911-.093.1738-.1628.2434z"/></svg>
"
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="m17.031 12.531-7.49996 7.5c-.06968.0697-.15241.125-.24345.1627-.09105.0377-.18863.0571-.28717.0571-.09855 0-.19613-.0194-.28718-.0571-.09104-.0377-.17377-.093-.24345-.1627-.06968-.0696-.12496-.1524-.16267-.2434-.03771-.0911-.05712-.1886-.05712-.2872 0-.0985.01941-.1961.05712-.2872.03771-.091.09299-.1737.16267-.2434l6.97031-6.9694-6.97031-6.96936c-.14073-.14073-.21979-.3316-.21979-.53062 0-.19903.07906-.3899.21979-.53063s.3316-.21979.53063-.21979c.19902 0 .38989.07906.53062.21979l7.49996 7.50001c.0698.0696.1251.1524.1628.2434.0378.0911.0572.1887.0572.2872 0 .0986-.0194.1962-.0572.2872-.0377.0911-.093.1738-.1628.2434z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          accessibilityLabel="identity_btn_link"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "opacity": 1,
              },
              {
                "alignItems": "center",
                "backgroundColor": "#151823",
                "borderRadius": 16,
                "flexDirection": "row",
                "marginBottom": 16,
                "padding": 16,
              },
            ]
          }
          testID="identity_btn_link"
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 16,
                  "includeFontPadding": false,
                }
              }
            >
              Link to existing profile
            </Text>
            <Text
              style={
                {
                  "color": "#A0A8B8",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 14,
                  "includeFontPadding": false,
                  "lineHeight": 21,
                  "marginTop": 2,
                }
              }
            >
              Connect this device to an existing profile
            </Text>
          </View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#ffffff"
            fill="#ffffff"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {},
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            testID="svg-icon-chevronRight"
            tintColor="#ffffff"
            vbHeight={24}
            vbWidth={24}
            width={20}
            xml="<svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m17.031 12.531-7.49996 7.5c-.06968.0697-.15241.125-.24345.1627-.09105.0377-.18863.0571-.28717.0571-.09855 0-.19613-.0194-.28718-.0571-.09104-.0377-.17377-.093-.24345-.1627-.06968-.0696-.12496-.1524-.16267-.2434-.03771-.0911-.05712-.1886-.05712-.2872 0-.0985.01941-.1961.05712-.2872.03771-.091.09299-.1737.16267-.2434l6.97031-6.9694-6.97031-6.96936c-.14073-.14073-.21979-.3316-.21979-.53062 0-.19903.07906-.3899.21979-.53063s.3316-.21979.53063-.21979c.19902 0 .38989.07906.53062.21979l7.49996 7.50001c.0698.0696.1251.1524.1628.2434.0378.0911.0572.1887.0572.2872 0 .0986-.0194.1962-.0572.2872-.0377.0911-.093.1738-.1628.2434z"/></svg>
"
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="m17.031 12.531-7.49996 7.5c-.06968.0697-.15241.125-.24345.1627-.09105.0377-.18863.0571-.28717.0571-.09855 0-.19613-.0194-.28718-.0571-.09104-.0377-.17377-.093-.24345-.1627-.06968-.0696-.12496-.1524-.16267-.2434-.03771-.0911-.05712-.1886-.05712-.2872 0-.0985.01941-.1961.05712-.2872.03771-.091.09299-.1737.16267-.2434l6.97031-6.9694-6.97031-6.96936c-.14073-.14073-.21979-.3316-.21979-.53062 0-.19903.07906-.3899.21979-.53063s.3316-.21979.53063-.21979c.19902 0 .38989.07906.53062.21979l7.49996 7.50001c.0698.0696.1251.1524.1628.2434.0378.0911.0572.1887.0572.2872 0 .0986-.0194.1962-.0572.2872-.0377.0911-.093.1738-.1628.2434z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "opacity": 1,
              },
              {
                "alignSelf": "center",
                "paddingBottom": 16,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#26D2E8",
                "fontFamily": "OpenSans-Bold",
                "fontSize": 14,
                "includeFontPadding": false,
              }
            }
          >
            Recover your account
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`App modal works correctly should prevent closing modal until user setup name 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#151823",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={1022.9007633587786}
      bbWidth={750}
      color="transparent"
      fill="transparent"
      focusable={false}
      height={1022.9007633587786}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {},
          {
            "flex": 0,
            "height": 1022,
            "width": 750,
          },
        ]
      }
      testID="svg-icon-backgroundCircles"
      tintColor="transparent"
      vbHeight={536}
      vbWidth={393}
      width={750}
      xml="<svg width="393" height="536" viewBox="0 0 393 536" fill="none" xmlns="http://www.w3.org/2000/svg">
<ellipse cx="435.17" cy="598.091" rx="435.17" ry="433.909" fill="url(#paint0_linear_2998_187267)" fill-opacity="0.04"/>
<path d="M869.841 598.091C869.841 837.455 675.234 1031.5 435.17 1031.5C195.107 1031.5 0.5 837.455 0.5 598.091C0.5 358.727 195.107 164.682 435.17 164.682C675.234 164.682 869.841 358.727 869.841 598.091Z" stroke="url(#paint1_linear_2998_187267)" stroke-opacity="0.1"/>
<ellipse cx="435.17" cy="433.909" rx="435.17" ry="433.909" fill="url(#paint2_linear_2998_187267)" fill-opacity="0.04"/>
<path d="M869.841 433.909C869.841 673.273 675.234 867.318 435.17 867.318C195.107 867.318 0.5 673.273 0.5 433.909C0.5 194.545 195.107 0.5 435.17 0.5C675.234 0.5 869.841 194.545 869.841 433.909Z" stroke="url(#paint3_linear_2998_187267)" stroke-opacity="0.1"/>
<ellipse cx="599.829" cy="598.091" rx="435.17" ry="433.909" fill="url(#paint4_linear_2998_187267)" fill-opacity="0.04"/>
<path d="M1034.5 598.091C1034.5 837.455 839.892 1031.5 599.829 1031.5C359.765 1031.5 165.158 837.455 165.158 598.091C165.158 358.727 359.765 164.682 599.829 164.682C839.892 164.682 1034.5 358.727 1034.5 598.091Z" stroke="url(#paint5_linear_2998_187267)" stroke-opacity="0.1"/>
<ellipse cx="599.829" cy="433.909" rx="435.17" ry="433.909" fill="url(#paint6_linear_2998_187267)" fill-opacity="0.04"/>
<path d="M1034.5 433.909C1034.5 673.273 839.892 867.318 599.829 867.318C359.765 867.318 165.158 673.273 165.158 433.909C165.158 194.545 359.765 0.5 599.829 0.5C839.892 0.5 1034.5 194.545 1034.5 433.909Z" stroke="url(#paint7_linear_2998_187267)" stroke-opacity="0.1"/>
<ellipse opacity="0.4" cx="517.5" cy="516" rx="258.75" ry="258" fill="#0D0F16"/>
<path d="M775.75 516C775.75 658.212 660.129 773.5 517.5 773.5C374.871 773.5 259.25 658.212 259.25 516C259.25 373.788 374.871 258.5 517.5 258.5C660.129 258.5 775.75 373.788 775.75 516Z" stroke="url(#paint8_linear_2998_187267)" stroke-opacity="0.5"/>
<defs>
<linearGradient id="paint0_linear_2998_187267" x1="435.17" y1="164.182" x2="435.17" y2="1032" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint1_linear_2998_187267" x1="435.17" y1="164.182" x2="435.17" y2="1032" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint2_linear_2998_187267" x1="435.17" y1="0" x2="435.17" y2="867.818" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint3_linear_2998_187267" x1="435.17" y1="0" x2="435.17" y2="867.818" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint4_linear_2998_187267" x1="599.829" y1="164.182" x2="599.829" y2="1032" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint5_linear_2998_187267" x1="599.829" y1="164.182" x2="599.829" y2="1032" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint6_linear_2998_187267" x1="599.829" y1="0" x2="599.829" y2="867.818" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint7_linear_2998_187267" x1="599.829" y1="0" x2="599.829" y2="867.818" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
<linearGradient id="paint8_linear_2998_187267" x1="517.5" y1="258" x2="517.5" y2="774" gradientUnits="userSpaceOnUse">
<stop stop-color="#00FFCF"/>
<stop offset="1" stop-color="#4AA6FF"/>
</linearGradient>
</defs>
</svg>
"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "payload": 0,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGEllipse
          cx={435.17}
          cy={598.091}
          fill={
            {
              "brushRef": "paint0_linear_2998_187267",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={435.17}
          ry={433.909}
        />
        <RNSVGPath
          d="M869.841 598.091C869.841 837.455 675.234 1031.5 435.17 1031.5C195.107 1031.5 0.5 837.455 0.5 598.091C0.5 358.727 195.107 164.682 435.17 164.682C675.234 164.682 869.841 358.727 869.841 598.091Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint1_linear_2998_187267",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={435.17}
          cy={433.909}
          fill={
            {
              "brushRef": "paint2_linear_2998_187267",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={435.17}
          ry={433.909}
        />
        <RNSVGPath
          d="M869.841 433.909C869.841 673.273 675.234 867.318 435.17 867.318C195.107 867.318 0.5 673.273 0.5 433.909C0.5 194.545 195.107 0.5 435.17 0.5C675.234 0.5 869.841 194.545 869.841 433.909Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint3_linear_2998_187267",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={599.829}
          cy={598.091}
          fill={
            {
              "brushRef": "paint4_linear_2998_187267",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={435.17}
          ry={433.909}
        />
        <RNSVGPath
          d="M1034.5 598.091C1034.5 837.455 839.892 1031.5 599.829 1031.5C359.765 1031.5 165.158 837.455 165.158 598.091C165.158 358.727 359.765 164.682 599.829 164.682C839.892 164.682 1034.5 358.727 1034.5 598.091Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint5_linear_2998_187267",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={599.829}
          cy={433.909}
          fill={
            {
              "brushRef": "paint6_linear_2998_187267",
              "type": 1,
            }
          }
          fillOpacity={0.04}
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rx={435.17}
          ry={433.909}
        />
        <RNSVGPath
          d="M1034.5 433.909C1034.5 673.273 839.892 867.318 599.829 867.318C359.765 867.318 165.158 673.273 165.158 433.909C165.158 194.545 359.765 0.5 599.829 0.5C839.892 0.5 1034.5 194.545 1034.5 433.909Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint7_linear_2998_187267",
              "type": 1,
            }
          }
          strokeOpacity={0.1}
        />
        <RNSVGEllipse
          cx={517.5}
          cy={516}
          fill={
            {
              "payload": 4279045910,
              "type": 0,
            }
          }
          opacity={0.4}
          propList={
            [
              "fill",
            ]
          }
          rx={258.75}
          ry={258}
        />
        <RNSVGPath
          d="M775.75 516C775.75 658.212 660.129 773.5 517.5 773.5C374.871 773.5 259.25 658.212 259.25 516C259.25 373.788 374.871 258.5 517.5 258.5C660.129 258.5 775.75 373.788 775.75 516Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "brushRef": "paint8_linear_2998_187267",
              "type": 1,
            }
          }
          strokeOpacity={0.5}
        />
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint0_linear_2998_187267"
            x1={435.17}
            x2={435.17}
            y1={164.182}
            y2={1032}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint1_linear_2998_187267"
            x1={435.17}
            x2={435.17}
            y1={164.182}
            y2={1032}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint2_linear_2998_187267"
            x1={435.17}
            x2={435.17}
            y1={0}
            y2={867.818}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint3_linear_2998_187267"
            x1={435.17}
            x2={435.17}
            y1={0}
            y2={867.818}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint4_linear_2998_187267"
            x1={599.829}
            x2={599.829}
            y1={164.182}
            y2={1032}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint5_linear_2998_187267"
            x1={599.829}
            x2={599.829}
            y1={164.182}
            y2={1032}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint6_linear_2998_187267"
            x1={599.829}
            x2={599.829}
            y1={0}
            y2={867.818}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint7_linear_2998_187267"
            x1={599.829}
            x2={599.829}
            y1={0}
            y2={867.818}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -16711729,
                1,
                -11884801,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="paint8_linear_2998_187267"
            x1={517.5}
            x2={517.5}
            y1={258}
            y2={774}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          [
            {
              "flex": 1,
            },
            {
              "marginBottom": 0,
              "marginTop": 0,
            },
          ],
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        bounces={false}
        contentContainerStyle={
          {
            "flex": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 16,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#ffffff",
                "fontFamily": "OpenSans-Bold",
                "fontSize": 16,
                "includeFontPadding": false,
              }
            }
          >
            Choose a username
          </Text>
          <View
            style={
              {
                "marginTop": 24,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  {
                    "justifyContent": "space-between",
                  },
                  {
                    "marginBottom": 12,
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#A0A8B8",
                    "fontFamily": "OpenSans-SemiBold",
                    "fontSize": 14,
                    "includeFontPadding": false,
                  }
                }
              >
                Name *
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                hitSlop={8}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#26D2E8",
                      "fontFamily": "OpenSans-SemiBold",
                      "fontSize": 16,
                      "includeFontPadding": false,
                    }
                  }
                >
                  Generate
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "backgroundColor": "#222430",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "marginBottom": 8,
                    "paddingHorizontal": 16,
                  },
                  {
                    "borderColor": "rgba(34, 36, 48, 1)",
                  },
                ]
              }
            >
              <TextInput
                accessibilityLabel="onboarding_input_username"
                accessible={true}
                maxLength={22}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholder="Enter name"
                placeholderTextColor="#707785"
                selectionColor="#26D2E8"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "OpenSans-Regular",
                    "fontSize": 16,
                    "includeFontPadding": false,
                    "paddingVertical": 12,
                  }
                }
                testID="onboarding_input_username"
                value=""
              />
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          />
          <View
            accessibilityLabel="onboarding_btn_save_username"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "opacity": 1,
                },
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#26D2E8",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 16,
                  },
                  undefined,
                ],
              ]
            }
            testID="onboarding_btn_save_username"
          >
            <Text
              style={
                {
                  "color": "#141925",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 16,
                  "includeFontPadding": false,
                  "marginHorizontal": 8,
                  "textAlign": "center",
                  "textTransform": "none",
                }
              }
            >
              I’m all set!
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`App modal works correctly should render the correct component when modalType is provided 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#151823",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#151823",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={122}
      bbWidth={167}
      color="transparent"
      fill="transparent"
      focusable={false}
      height={122}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {},
          {
            "flex": 0,
            "height": 122,
            "width": 167,
          },
        ]
      }
      testID="svg-icon-newVersion"
      tintColor="transparent"
      vbHeight={122}
      vbWidth={167}
      width={167}
      xml="<svg width="167" height="122" viewBox="0 0 167 122" fill="none"
  xmlns="http://www.w3.org/2000/svg">
  <path fill-rule="evenodd" clip-rule="evenodd" d="M28.058.516c-.156.054-.148.585-.13 1.755.008.486.018 1.083.018 1.801 0 12.477 10.032 15.014 10.032 15.014s-10.032-.996-10.032 1.692c0 2.688 8.767 6.133 8.767 6.133s-14.965 2.386-14.965 5.075c0 .851 1.015 1.026 2.843 1.34 2.34.404 6.016 1.036 10.604 3.613C28.868 45.53 25.13 56.151 25.13 67.646c0 28.597 23.144 51.779 51.694 51.779a51.395 51.395 0 0 0 27.908-8.186 3.39 3.39 0 0 1-.413-3.206c2.399-6.402 3.393-11.07 3.135-15.132-.255-4.008-1.743-7.618-4.698-11.88-1.625-2.345-3.25-4.146-4.804-5.755-.409-.424-.822-.843-1.234-1.26l-.002-.002c-1.115-1.13-2.217-2.248-3.182-3.402-1.363-1.632-2.54-3.434-3.365-5.749-.82-2.303-1.26-5.03-1.26-8.487 0-9.388 6.282-16.917 13.922-20.058 4.757-1.956 10.15-2.247 14.986-.212-9.451-12.302-24.298-20.23-40.993-20.23-.578 0-1.154.01-1.727.029-34.099-.522-43.612-11.59-46.218-14.622-.446-.519-.69-.802-.82-.757Zm41.559 59.207a12.817 12.817 0 0 0-4.282-.732c-1.324 0-2.6.2-3.802.572-.91.283-1.366.424-1.716.357a1.444 1.444 0 0 1-.795-.45c-.238-.266-.318-.589-.477-1.234a13.047 13.047 0 0 1-.374-3.124c0-5.506 3.343-9.97 7.465-9.97 4.124 0 7.466 4.464 7.466 9.97 0 1.184-.155 2.32-.438 3.373-.175.648-.262.972-.51 1.234a1.437 1.437 0 0 1-.817.43c-.356.056-.81-.105-1.72-.426Z" fill="url(#a)"/>
  <path d="M104.2 80.017c-6.803-9.813-13.534-10.422-13.534-23.65 0-17.12 22.956-27.816 33.784-12.628 4.648 6.522 6.21 16.583 6.21 24.452 0 17.573-8.868 33.084-22.406 42.379-1.292.887-2.839-.452-2.289-1.918 4.862-12.974 4.373-19.78-1.765-28.635Z" fill="url(#b)"/>
  <path d="m159.698 20.133-6.452-2.375-2.375-6.457A1.986 1.986 0 0 0 149.004 10a1.992 1.992 0 0 0-1.868 1.302l-2.377 6.449-6.456 2.375A1.987 1.987 0 0 0 137 21.992a1.99 1.99 0 0 0 1.303 1.868l6.447 2.39 2.375 6.453a1.992 1.992 0 0 0 3.006.944 1.99 1.99 0 0 0 .729-.944l2.375-6.452 6.456-2.375a1.991 1.991 0 0 0 0-3.735l.007-.008Zm-7.149 4.242a1.981 1.981 0 0 0-1.179 1.179l-2.375 6.432-2.37-6.437a1.974 1.974 0 0 0-1.174-1.174L139.019 22l6.432-2.375a1.988 1.988 0 0 0 1.174-1.174L149 12.02l2.375 6.432a1.977 1.977 0 0 0 1.179 1.179l6.432 2.375-6.437 2.37ZM153 9a.998.998 0 0 1 1-1h2V6a.998.998 0 0 1 1-1 1 1 0 0 1 1 1v2h2a1 1 0 1 1 0 2h-2v2a.998.998 0 0 1-1 1 1.001 1.001 0 0 1-1-1v-2h-2a1.001 1.001 0 0 1-1-1Zm13 6a.998.998 0 0 1-1 1h-1v1a.998.998 0 0 1-1 1 1.001 1.001 0 0 1-1-1v-1h-1a1.001 1.001 0 0 1 0-2h1v-1a.998.998 0 0 1 1-1 1 1 0 0 1 1 1v1h1a1 1 0 0 1 1 1ZM12.349 68.066 9.123 66.88l-1.187-3.23a.995.995 0 0 0-1.868 0L4.88 66.875l-3.228 1.188a.995.995 0 0 0 0 1.867l3.224 1.195 1.188 3.226a.994.994 0 0 0 1.867 0l1.188-3.225 3.228-1.188a.995.995 0 0 0 0-1.867l.003-.005Zm-3.575 2.121a.992.992 0 0 0-.589.59l-1.187 3.216-1.185-3.219a.992.992 0 0 0-.587-.587L2.009 69l3.217-1.188a.992.992 0 0 0 .587-.586L7 64.009l1.188 3.217a.992.992 0 0 0 .589.589l3.216 1.188-3.219 1.184ZM9 62.5a.5.5 0 0 1 .5-.5h1v-1a.5.5 0 0 1 1 0v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 1 1-1 0v-1h-1a.5.5 0 0 1-.5-.5Zm6.5 3a.5.5 0 0 1-.5.5h-.5v.5a.5.5 0 1 1-1 0V66H13a.5.5 0 0 1 0-1h.5v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 .5.5Zm131.849 48.566-3.226-1.187-1.187-3.228a1 1 0 0 0-1.503-.473.998.998 0 0 0-.365.473l-1.189 3.224-3.228 1.187a.997.997 0 0 0 0 1.868l3.224 1.195 1.188 3.226a.996.996 0 0 0 1.503.473c.166-.117.294-.282.364-.473l1.188-3.225 3.228-1.188a.989.989 0 0 0 .651-.934.992.992 0 0 0-.651-.933l.003-.005Zm-3.575 2.122a.98.98 0 0 0-.589.589l-1.187 3.216-1.185-3.219a.988.988 0 0 0-.587-.586L137.009 115l3.217-1.188a.988.988 0 0 0 .587-.586l1.187-3.217 1.188 3.217a.993.993 0 0 0 .589.589l3.216 1.187-3.219 1.186ZM144 108.5c0-.133.053-.26.146-.354a.504.504 0 0 1 .354-.146h1v-1c0-.133.053-.26.146-.354a.504.504 0 0 1 .708 0 .504.504 0 0 1 .146.354v1h1c.133 0 .26.053.354.146a.504.504 0 0 1 0 .708.504.504 0 0 1-.354.146h-1v1c0 .133-.053.26-.146.354a.504.504 0 0 1-.708 0 .504.504 0 0 1-.146-.354v-1h-1a.504.504 0 0 1-.354-.146.504.504 0 0 1-.146-.354Zm6.5 3c0 .133-.053.26-.146.354A.504.504 0 0 1 150 112h-.5v.5c0 .133-.053.26-.146.354a.504.504 0 0 1-.708 0 .504.504 0 0 1-.146-.354v-.5h-.5a.504.504 0 0 1-.354-.146.504.504 0 0 1 0-.708A.504.504 0 0 1 148 111h.5v-.5c0-.133.053-.26.146-.354a.504.504 0 0 1 .708 0 .504.504 0 0 1 .146.354v.5h.5c.133 0 .26.053.354.146a.504.504 0 0 1 .146.354Z" fill="#F2B414" opacity=".1"/>
  <defs>
    <radialGradient id="b" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(39.69114 -72.61887 59.56725 32.55755 96.921 86.36)">
      <stop stop-color="#D7821F"/>
      <stop offset="1" stop-color="#BF36D6"/>
    </radialGradient>
    <linearGradient id="a" x1="128.777" y1=".734" x2="5.573" y2="167.096" gradientUnits="userSpaceOnUse">
      <stop stop-color="#69E1B9"/>
      <stop offset="1" stop-color="#818BEF"/>
    </linearGradient>
  </defs>
</svg>
"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          {
            "payload": 0,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M28.058.516c-.156.054-.148.585-.13 1.755.008.486.018 1.083.018 1.801 0 12.477 10.032 15.014 10.032 15.014s-10.032-.996-10.032 1.692c0 2.688 8.767 6.133 8.767 6.133s-14.965 2.386-14.965 5.075c0 .851 1.015 1.026 2.843 1.34 2.34.404 6.016 1.036 10.604 3.613C28.868 45.53 25.13 56.151 25.13 67.646c0 28.597 23.144 51.779 51.694 51.779a51.395 51.395 0 0 0 27.908-8.186 3.39 3.39 0 0 1-.413-3.206c2.399-6.402 3.393-11.07 3.135-15.132-.255-4.008-1.743-7.618-4.698-11.88-1.625-2.345-3.25-4.146-4.804-5.755-.409-.424-.822-.843-1.234-1.26l-.002-.002c-1.115-1.13-2.217-2.248-3.182-3.402-1.363-1.632-2.54-3.434-3.365-5.749-.82-2.303-1.26-5.03-1.26-8.487 0-9.388 6.282-16.917 13.922-20.058 4.757-1.956 10.15-2.247 14.986-.212-9.451-12.302-24.298-20.23-40.993-20.23-.578 0-1.154.01-1.727.029-34.099-.522-43.612-11.59-46.218-14.622-.446-.519-.69-.802-.82-.757Zm41.559 59.207a12.817 12.817 0 0 0-4.282-.732c-1.324 0-2.6.2-3.802.572-.91.283-1.366.424-1.716.357a1.444 1.444 0 0 1-.795-.45c-.238-.266-.318-.589-.477-1.234a13.047 13.047 0 0 1-.374-3.124c0-5.506 3.343-9.97 7.465-9.97 4.124 0 7.466 4.464 7.466 9.97 0 1.184-.155 2.32-.438 3.373-.175.648-.262.972-.51 1.234a1.437 1.437 0 0 1-.817.43c-.356.056-.81-.105-1.72-.426Z"
          fill={
            {
              "brushRef": "a",
              "type": 1,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
        <RNSVGPath
          d="M104.2 80.017c-6.803-9.813-13.534-10.422-13.534-23.65 0-17.12 22.956-27.816 33.784-12.628 4.648 6.522 6.21 16.583 6.21 24.452 0 17.573-8.868 33.084-22.406 42.379-1.292.887-2.839-.452-2.289-1.918 4.862-12.974 4.373-19.78-1.765-28.635Z"
          fill={
            {
              "brushRef": "b",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="m159.698 20.133-6.452-2.375-2.375-6.457A1.986 1.986 0 0 0 149.004 10a1.992 1.992 0 0 0-1.868 1.302l-2.377 6.449-6.456 2.375A1.987 1.987 0 0 0 137 21.992a1.99 1.99 0 0 0 1.303 1.868l6.447 2.39 2.375 6.453a1.992 1.992 0 0 0 3.006.944 1.99 1.99 0 0 0 .729-.944l2.375-6.452 6.456-2.375a1.991 1.991 0 0 0 0-3.735l.007-.008Zm-7.149 4.242a1.981 1.981 0 0 0-1.179 1.179l-2.375 6.432-2.37-6.437a1.974 1.974 0 0 0-1.174-1.174L139.019 22l6.432-2.375a1.988 1.988 0 0 0 1.174-1.174L149 12.02l2.375 6.432a1.977 1.977 0 0 0 1.179 1.179l6.432 2.375-6.437 2.37ZM153 9a.998.998 0 0 1 1-1h2V6a.998.998 0 0 1 1-1 1 1 0 0 1 1 1v2h2a1 1 0 1 1 0 2h-2v2a.998.998 0 0 1-1 1 1.001 1.001 0 0 1-1-1v-2h-2a1.001 1.001 0 0 1-1-1Zm13 6a.998.998 0 0 1-1 1h-1v1a.998.998 0 0 1-1 1 1.001 1.001 0 0 1-1-1v-1h-1a1.001 1.001 0 0 1 0-2h1v-1a.998.998 0 0 1 1-1 1 1 0 0 1 1 1v1h1a1 1 0 0 1 1 1ZM12.349 68.066 9.123 66.88l-1.187-3.23a.995.995 0 0 0-1.868 0L4.88 66.875l-3.228 1.188a.995.995 0 0 0 0 1.867l3.224 1.195 1.188 3.226a.994.994 0 0 0 1.867 0l1.188-3.225 3.228-1.188a.995.995 0 0 0 0-1.867l.003-.005Zm-3.575 2.121a.992.992 0 0 0-.589.59l-1.187 3.216-1.185-3.219a.992.992 0 0 0-.587-.587L2.009 69l3.217-1.188a.992.992 0 0 0 .587-.586L7 64.009l1.188 3.217a.992.992 0 0 0 .589.589l3.216 1.188-3.219 1.184ZM9 62.5a.5.5 0 0 1 .5-.5h1v-1a.5.5 0 0 1 1 0v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 1 1-1 0v-1h-1a.5.5 0 0 1-.5-.5Zm6.5 3a.5.5 0 0 1-.5.5h-.5v.5a.5.5 0 1 1-1 0V66H13a.5.5 0 0 1 0-1h.5v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 .5.5Zm131.849 48.566-3.226-1.187-1.187-3.228a1 1 0 0 0-1.503-.473.998.998 0 0 0-.365.473l-1.189 3.224-3.228 1.187a.997.997 0 0 0 0 1.868l3.224 1.195 1.188 3.226a.996.996 0 0 0 1.503.473c.166-.117.294-.282.364-.473l1.188-3.225 3.228-1.188a.989.989 0 0 0 .651-.934.992.992 0 0 0-.651-.933l.003-.005Zm-3.575 2.122a.98.98 0 0 0-.589.589l-1.187 3.216-1.185-3.219a.988.988 0 0 0-.587-.586L137.009 115l3.217-1.188a.988.988 0 0 0 .587-.586l1.187-3.217 1.188 3.217a.993.993 0 0 0 .589.589l3.216 1.187-3.219 1.186ZM144 108.5c0-.133.053-.26.146-.354a.504.504 0 0 1 .354-.146h1v-1c0-.133.053-.26.146-.354a.504.504 0 0 1 .708 0 .504.504 0 0 1 .146.354v1h1c.133 0 .26.053.354.146a.504.504 0 0 1 0 .708.504.504 0 0 1-.354.146h-1v1c0 .133-.053.26-.146.354a.504.504 0 0 1-.708 0 .504.504 0 0 1-.146-.354v-1h-1a.504.504 0 0 1-.354-.146.504.504 0 0 1-.146-.354Zm6.5 3c0 .133-.053.26-.146.354A.504.504 0 0 1 150 112h-.5v.5c0 .133-.053.26-.146.354a.504.504 0 0 1-.708 0 .504.504 0 0 1-.146-.354v-.5h-.5a.504.504 0 0 1-.354-.146.504.504 0 0 1 0-.708A.504.504 0 0 1 148 111h.5v-.5c0-.133.053-.26.146-.354a.504.504 0 0 1 .708 0 .504.504 0 0 1 .146.354v.5h.5c.133 0 .26.053.354.146a.504.504 0 0 1 .146.354Z"
          fill={
            {
              "payload": 4294095892,
              "type": 0,
            }
          }
          opacity={0.1}
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              [
                0,
                -2653665,
                1,
                -4245802,
              ]
            }
            gradientTransform={
              [
                39.69114,
                -72.61887,
                59.56725,
                32.55755,
                96.921,
                86.36,
              ]
            }
            gradientUnits={1}
            name="b"
            rx={1}
            ry={1}
          />
          <RNSVGLinearGradient
            gradient={
              [
                0,
                -9838151,
                1,
                -8287249,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="a"
            x1={128.777}
            x2={5.573}
            y1={0.734}
            y2={167.096}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#26D2E8",
          "fontFamily": "OpenSans-Bold",
          "fontSize": 24,
          "includeFontPadding": false,
          "marginHorizontal": 32,
          "marginTop": 24,
          "textAlign": "center",
        }
      }
    >
      Keet 2.1!
    </Text>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 16,
          "includeFontPadding": false,
          "marginHorizontal": 32,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      Explore an array of exciting new features, including the much-anticipated Calls !!!
To ensure you make the most of these enhancements, kindly be informed that App v2 is not compatible with previous mobile versions. Start exploring!
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 40,
          "left": 40,
          "right": 40,
          "top": 40,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "opacity": 1,
          },
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "height": 30,
              "width": 30,
            },
            {
              "position": "absolute",
              "right": 20,
              "top": 20,
            },
          ],
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        color="#A0A8B8"
        fill="#A0A8B8"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        testID="svg-icon-x"
        tintColor="#A0A8B8"
        vbHeight={24}
        vbWidth={24}
        width={20}
        xml="<svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m19.1475 18.3525c.0553.0515.0996.1136.1303.1826.0308.069.0473.1435.0487.219.0013.0755-.0126.1506-.0409.2206s-.0704.1337-.1238.1871-.1171.0955-.1871.1238-.1451.0422-.2206.0408c-.0755-.0013-.15-.0178-.219-.0486-.069-.0307-.1311-.075-.1826-.1303l-6.3525-6.3516-6.35249 6.3516c-.10663.0994-.24767.1535-.3934.1509-.14572-.0026-.28476-.0616-.38782-.1647-.10306-.103-.16209-.2421-.16466-.3878-.00258-.1457.05152-.2868.15088-.3934l6.35159-6.3525-6.35159-6.3525c-.09936-.10663-.15346-.24767-.15088-.39339.00257-.14573.0616-.28477.16466-.38783s.2421-.16209.38782-.16466c.14573-.00257.28677.05152.3934.15088l6.35249 6.3516 6.3525-6.3516c.1066-.09936.2477-.15345.3934-.15088s.2848.0616.3878.16466c.1031.10306.1621.2421.1647.38783.0026.14572-.0515.28676-.1509.39339l-6.3516 6.3525z" fill="#fff"/></svg>
"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4288719032,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="m19.1475 18.3525c.0553.0515.0996.1136.1303.1826.0308.069.0473.1435.0487.219.0013.0755-.0126.1506-.0409.2206s-.0704.1337-.1238.1871-.1171.0955-.1871.1238-.1451.0422-.2206.0408c-.0755-.0013-.15-.0178-.219-.0486-.069-.0307-.1311-.075-.1826-.1303l-6.3525-6.3516-6.35249 6.3516c-.10663.0994-.24767.1535-.3934.1509-.14572-.0026-.28476-.0616-.38782-.1647-.10306-.103-.16209-.2421-.16466-.3878-.00258-.1457.05152-.2868.15088-.3934l6.35159-6.3525-6.35159-6.3525c-.09936-.10663-.15346-.24767-.15088-.39339.00257-.14573.0616-.28477.16466-.38783s.2421-.16209.38782-.16466c.14573-.00257.28677.05152.3934.15088l6.35249 6.3516 6.3525-6.3516c.1066-.09936.2477-.15345.3934-.15088s.2848.0616.3878.16466c.1031.10306.1621.2421.1647.38783.0026.14572-.0515.28676-.1509.39339l-6.3516 6.3525z"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</RNCSafeAreaView>
`;
